factorial and fibonacci